<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_peti"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.majo.peti.PetiActivity">
    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/option"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"></RelativeLayout>

    <LinearLayout
        android:id="@+id/option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        >
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/explorer"
            android:drawableTop="@mipmap/ic_launcher"
            android:layout_gravity="center"/>
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/petis"
            android:drawableTop="@mipmap/ic_launcher"
            android:gravity="center"/>
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/profile"
            android:drawableTop="@mipmap/ic_launcher"
            android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>
