<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_peti"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.majo.peti.NewPetiActivity">
    <RelativeLayout
        android:id="@+id/newelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <TextView
            android:id="@+id/newelcomemsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/newelcomemsg"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrappername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newelcomemsg">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"/>
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/evidencepictures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/newelcome">

        <ImageView
            android:id="@+id/pictureone"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight=".33"
            android:layout_margin="5dp"
            />

        <ImageView
            android:id="@+id/picturetwo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight=".33"/>
        <ImageView
            android:id="@+id/picturethree"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight=".33"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/typeanddescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/evidencepictures"
        android:layout_marginBottom="5dp"
        >

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/mapandstree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/typeanddescription"
        >

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"/>
            <LinearLayout
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal"
                android:background="@color/blackalpha">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapperstree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight=".6">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/stree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/stree"
                    />
            </android.support.design.widget.TextInputLayout>
            <ImageButton
                android:id="@+id/location"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight=".4"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
